# php_compiler

./: CMakeLists.txt  main.cpp  php_lexer.l
test/: example.php  example2.php  test_arrays.php  test_arrays_objects.php  test_basic_syntax.php  test_comments.php  test_control_structures.php  test_edge_cases.php  test_functions_classes.php  test_heredoc_nowdoc.php  test_mixed_content.php  test_strings.php
